[package]
name = "carboxyl"
version = "0.2.2"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]
description = "Library for functional reactive programming"
edition = "2018"
documentation = "https://docs.rs/carboxyl/"
homepage = "https://github.com/edibopp/carboxyl"
repository = "https://github.com/edibopp/carboxyl"
readme = "README.md"
keywords = ["frp", "reactive", "event", "concurrency"]
license = "MPL-2.0"
build = "build.rs"
autobenches = false

[dependencies]
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
quickcheck = "1.0"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

[[bench]]
name = "first_order"
harness = false

[[bench]]
name = "second_order"
harness = false

[[bench]]
name = "simple"
harness = false
